--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
 </head>
 <body>
     <header>
-        <h1>Hoddy, i'm Junaid Ali</h1>
+        <h1>Hoddy, i'm Muhammad Talha Taj</h1>
         <h2>WEB DEV</h2>
     </header>
     <nav>
@@ -61,7 +61,7 @@
     </nav>
     <div class="container">
         <h2>About Me</h2>
-        <p>I'm Junaid Ali from Punjab, Pakistan, currently
+        <p>I'm Muhammad Talha Taj from Punjab, Pakistan, currently
             pursuing a BSCS degree at COMSATS University
             Islamabad, Attock campus. Originally from
             Gilgit-Baltistan, specifically Hunza district, I
