--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
             developer upon graduating. My academic
             journey and passion for technology drive my
             ambition to excel in this field and contribute to
-            innovative web development projects.</p>
+            innovative web development project.</p>
     </div>
     <div class="container">
         <h2>Skills</h2>
